[gd_scene load_steps=13 format=3 uid="uid://vnqddtppw2vv"]

[ext_resource type="Theme" uid="uid://b1ikqqgrqbgyp" path="res://GUI/pixel-art-theme.tres" id="1_onypu"]
[ext_resource type="Script" path="res://GUI/HUD/basic_gui_info.gd" id="2_x35vd"]
[ext_resource type="Script" path="res://GUI/HUD/health_bar.gd" id="3_tj1p5"]
[ext_resource type="Texture2D" uid="uid://cl6qp3vbql5ab" path="res://Objects/Prisoner/prisoner-run-1.png" id="3_wx4v2"]
[ext_resource type="Texture2D" uid="uid://c7iqs81mtye7m" path="res://GUI/HUD/health bar/health-bar.png" id="4_6f7r3"]
[ext_resource type="Texture2D" uid="uid://vslcr4cyeyrl" path="res://Objects/Flag/flag-1.png" id="4_ps62s"]
[ext_resource type="Texture2D" uid="uid://ltqfvn4u5tfx" path="res://GUI/HUD/health bar/health-container.png" id="5_muu8v"]
[ext_resource type="Script" path="res://GUI/HUD/level_score.gd" id="6_lohol"]
[ext_resource type="Script" path="res://GUI/HUD/power_up.gd" id="7_vdkk1"]
[ext_resource type="Script" path="res://GUI/HUD/low_health_timer.gd" id="9_fgom8"]
[ext_resource type="Script" path="res://GUI/HUD/pause_game_label.gd" id="11_jqi2n"]
[ext_resource type="Texture2D" uid="uid://ddme3t8ulubnl" path="res://GUI/HUD/heart-icon.png" id="11_yyd7g"]

[node name="HUD" type="CanvasLayer"]

[node name="TopInfoLabels" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 75.0
offset_bottom = 11.0
theme = ExtResource("1_onypu")
script = ExtResource("2_x35vd")
metadata/_edit_group_ = true

[node name="RemainingPrisoners" type="Label" parent="TopInfoLabels"]
layout_mode = 0
offset_left = 9.0
offset_right = 21.0
offset_bottom = 5.0
theme_override_colors/font_shadow_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "00"

[node name="PrisonersInHelicopter" type="Label" parent="TopInfoLabels"]
layout_mode = 0
offset_left = 36.0
offset_right = 48.0
offset_bottom = 5.0
theme_override_colors/font_shadow_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "11"

[node name="PrisonersSaved" type="Label" parent="TopInfoLabels"]
texture_filter = 1
layout_mode = 0
offset_left = 59.0
offset_right = 70.0
offset_bottom = 5.0
theme_override_colors/font_shadow_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "22"

[node name="Heart-icon" type="Sprite2D" parent="TopInfoLabels"]
position = Vector2(30, 2)
texture = ExtResource("11_yyd7g")

[node name="Prisoner-run-1" type="Sprite2D" parent="TopInfoLabels"]
position = Vector2(2, 2)
texture = ExtResource("3_wx4v2")

[node name="Flag-1" type="Sprite2D" parent="TopInfoLabels"]
position = Vector2(55, 2)
scale = Vector2(0.625, 0.625)
texture = ExtResource("4_ps62s")

[node name="HealthBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 85.0
offset_top = 3.0
offset_right = 157.0
offset_bottom = 13.0
script = ExtResource("3_tj1p5")
metadata/_edit_group_ = true

[node name="HealthBar" type="Sprite2D" parent="HealthBar"]
texture_filter = 1
texture_repeat = 2
position = Vector2(2.32, 2.31)
texture = ExtResource("4_6f7r3")
centered = false
region_enabled = true
region_rect = Rect2(50, 50, 64.98, 4.685)

[node name="HealthBarContainer" type="NinePatchRect" parent="HealthBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_muu8v")
region_rect = Rect2(-0.0494795, -0.331854, 70.7593, 11.3018)
patch_margin_left = 5
patch_margin_top = 4
patch_margin_right = 7
patch_margin_bottom = 6

[node name="LowHealthTimer" type="Timer" parent="HealthBar"]
wait_time = 0.5
script = ExtResource("9_fgom8")

[node name="Score" type="Label" parent="."]
texture_filter = 1
offset_left = 121.0
offset_top = 14.0
offset_right = 153.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "000234"
horizontal_alignment = 2
script = ExtResource("6_lohol")

[node name="PowerUp" type="Label" parent="."]
texture_filter = 1
offset_left = 86.0
offset_top = 14.0
offset_right = 118.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "B"
script = ExtResource("7_vdkk1")

[node name="PauseGameLabel" type="Label" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -2.5
offset_right = 27.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.176471, 0.105882, 0.0156863, 1)
text = "GAME PAUSED"
script = ExtResource("11_jqi2n")
